force-app/main/default/objects/Account/fields/checking__c.field-meta.xml
<CustomField>
    <fullName>checking__c</fullName>
    <label>checking</label>
    <type>Date</type>
</CustomField>