force-app/main/default/objects/Account/fields/manual__c.field-meta.xml
<CustomField>
    <fullName>manual__c</fullName>
    <label>manual</label>
    <length>200</length>
    <type>Text</type>
</CustomField>